# solana-szn-program

./: Cargo.toml
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: client.rs
